# mines-rs

./: .gitignore  Cargo.toml  build.py  build.sh
cli/: Cargo.toml
cli/src/: main.rs  options.rs
core/: Cargo.toml
core/src/: lib.rs
core/src/client/: action_queue.rs
core/src/http/: main.rs
core/src/server/js/: api.rs
core/src/server/native/: mod.rs
gui/: Cargo.toml
gui/src/: main.rs
http/: Cargo.toml
mines-rpc/: .gitignore  Cargo.toml  build.rs
mines-rpc/protos/: mines.proto
mines-rpc/src/: client.rs  lib.rs  server.rs
mines-rpc/src/protogen/: mod.rs
src/: action_queue.rs  cell.rs  client.rs  coords.rs  game_batch.rs  game_grid.rs  http.rs  lib.rs  main.rs  mongodb_connector.rs  options.rs  server_wrapper.rs  util.rs
src/cli/: main.rs  options.rs
src/client/: action_queue.rs  cell.rs  client.rs  mod.rs
src/server/: db.rs  json_api.rs  json_server_wrapper.rs  mod.rs  native_server.rs
src/server/js/: api.rs  mod.rs
src/server/native/: db.rs  mod.rs
src/server/native/db_inserter/: mod.rs
src/webapp/: game_runner.rs  main.rs
