[package]
name = "mines-rs-core"
version = "0.1.0"
authors = ["Toby Dimmick <tobydimmick@protonmail.ch>"]

[dependencies]
bson = "^0.12.0"
chrono = { version = "^0.4", features = ["serde"] }
hyper-sync = { git = "https://github.com/tobz1000/hyper-sync" }
itertools = "^0.7"
lazy_static = "^1.0"
mersenne_twister = "^1.0"
mongodb = { git = "https://github.com/tobz1000/mongo-rust-driver-prototype.git" }
rand = "^0.4"
rayon = "^1.0"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
wither = { git = "https://github.com/tobz1000/wither.git" }

[dev-dependencies]
quickcheck = "^0.6"